fix carousel overflow

--- a/src/styles/services.scss
+++ b/src/styles/services.scss
@@ -29,13 +29,13 @@
 
       &.prev {
         transform: translateY(-50%) rotate(180deg);
-        left: 5%;
-        margin-left: 0.5rem;
+        left: 0;
+        // margin-left: 0.5rem;
       }
 
       &.next {
-        right: 5%;
-        margin-right: 0.5rem;
+        right: 0;
+        // margin-right: 0.5rem;
       }
 
       &:hover {
@@ -52,7 +52,7 @@
     }
     .carousel {
       display: flex;
-      width: calc(100% - 2 * 5rem);
+      // width: calc(100% - 2 * 5rem);
       --carousel-index: 0;
       --items-per-screen: 3;
       transform: translateX(calc(var(--carousel-index) * -100%));
